# EasyDC

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: auth.rs  db.rs  ldap.rs  main.rs  models.rs  schema.rs
src/handlers/: auth_handlers.rs  ldap_mgmt.rs  mod.rs  servers.rs  setup.rs
templates/: audit.html  base.html  base_public.html  dashboard.html  dns_zone.html  ldap_mgmt.html  login.html  server_detail.html  setup.html  users.html
