[package]
name = "EasyDC"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "sqlite"] }
ldap3 = "0.11"
bcrypt = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3.23"
tera = "1"
uuid = { version = "1", features = ["v4"] }
openssl = { version = "0.10", features = ["vendored"] }
rust-embed = { version = "8", features = ["include-exclude"] }
